<resources>
    <string name="app_name">QuickRead</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="favourites">Favourites.</string>
    <string name="headlines">Headlines.</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
    <string name="search">Search.</string>
    <string name="search_news">Search news...</string>
    <string name="read_the_world_today">Read the world today</string>
    <string name="news_app">News App</string>
    <string name="categories">Categories.</string>
    <string name="share">share</string>
</resources>